--- a/Client/wwwroot/index.html
+++ b/Client/wwwroot/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+
 <html lang="en">
 
 <head>
@@ -11,13 +12,14 @@
     <link href="BirdEyes.Client.styles.css" rel="stylesheet" />
 </head>
 
+
 <body>
     <div id="app">Loading...</div>
 
     <div id="blazor-error-ui">
-        An unhandled error has occurred.
-        <a href="" class="reload">Reload</a>
-        <a class="dismiss">🗙</a>
+        Error, error, this is wrong!
+        <div><a href="" class="reload">Refresh?</a></div>
+        <a class="dismiss">✖</a>
     </div>
     <script src="_content/Microsoft.AspNetCore.Components.WebAssembly.Authentication/AuthenticationService.js"></script>
     <script src="_framework/blazor.webassembly.js"></script>
